src/output/snapshots/templategraph_php__output__dot__snapshots__snapshot_cycle_does_not_loop.snap
---
source: src/output/dot.rs
assertion_line: 293
expression: render(&graph)
---
digraph templategraph {
    rankdir=LR;
    node [shape=box];

    "/project/a.php" [label="a.php", shape=doubleoctagon];
    "/project/b.php" [label="b.php"];

    "/project/a.php" -> "/project/b.php" [label="include"];
    "/project/b.php" -> "/project/a.php" [label="include"];
}
