src/output/snapshots/templategraph_php__output__dot__snapshots__snapshot_unresolved_dynamic_argument.snap
---
source: src/output/dot.rs
assertion_line: 265
expression: render(&graph)
---
digraph templategraph {
    rankdir=LR;
    node [shape=box];

    "/project/index.php" [label="index.php", shape=doubleoctagon];
    "unresolved::$dynamic" [label="unresolved: $dynamic", style=dashed];

    "/project/index.php" -> "unresolved::$dynamic" [label="unresolved", style=dashed];
}
